webapp/styles/main.less
@import "colors.less";
@import (css)
  url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap");

@import "../css/variables.less";

.splash-main-container {
  height: 100%;
}
.splash-background {
  background: url(../resources/splash_new.jpg) no-repeat center;
  background-size: cover;
  display: flex;
  .logo-container {
    background: #ffffff;
    box-shadow: -4px 0px 50px rgba(0, 0, 0, 0.1);
    padding: 18px 21px 19px 17px;
    margin: auto 0 20px auto;
    .logo {
      height: 55px;
      display: inherit;
      img {
        height: 100%;
      }
    }
  }
}
.splash-container {
  padding: 0 89px 0 57px;
  .brand-logo {
    height: 52px;
    margin: 57px 0 107px;
  }
}
.bg-grey {
  padding: 0;
  height: 100%;
}
.grey-box {
  background: @bgDark;
  padding: 25px 23px;
  margin-bottom: 30px;
  max-height: 272px;
  overflow-y: auto;
}
html,
body {
  font-family: @font;
  overflow: auto;
  background: @bgDarker;
}
.box-with-button {
  display: flex;
  justify-content: space-between;
  align-items: flex-end;
  .input-form-control {
    width: 75%;
    input {
      font-size: 16px;
      padding-bottom: 8px;
      color: #ffffff;
    }
  }
}
.chip-button {
  border: 1px solid #e0e0e0;
  border-radius: 16px;
  font-size: 13px;
  line-height: 13px;
  font-weight: 400;
}
.splash-footer {
  display: flex;
  justify-content: space-between;
  .MuiBox-root {
    font-size: 20px;
    line-height: 32px;
    letter-spacing: 0.5px;
    color: rgba(255, 255, 255, 0.2);
    margin-bottom: 19px;
  }
  .MuiLink-root {
    margin-right: 22px;
    + .MuiLink-root {
      margin-left: 22px;
    }
  }
  img {
    opacity: 0.5;
  }
}

@panelradius: 5px;
@gutter: 16px;
@icon-padding: 12px;
@font-size-panels: 16px;
@font: "Source Sans Pro", sans-serif;
@inputradius: 30px;
@font-weight-content: 300;
@font-weight-label: 400;

#mainContainer {
  color: white;
}

sup {
  font-size: 50%;
}

#logo {
  background-image: url("images/nwbExplorer.png");
  width: 300px;
  height: 76px;
}

.toolbar-gutters {
  padding: @gutter / 2 !important;
}

div.icon-container {
  margin: 0 -@icon-padding;
}

.contextMenuView {
  color: @primary_color;
  li {
    border-color: @primary_color!important;
  }

  li:hover {
    color: @background_color_widget;
  }
}

iframe {
  border: 0;
  body {
    background-color: transparent !important;
  }
}

.flex-filler {
  flex: 2;
  margin-bottom: 0;
}
.flexlayout__layout {
  position: relative;
  top: 0;
  bottom: 0;
  margin-bottom: 40px;

  flex: 1;
  a {
    color: @color-link;
  }
  .flexlayout__tab {
    padding: 1em 0.5em;
    background-color: @box_color;
    border-top-right-radius: @panelradius;
    border-bottom-right-radius: @panelradius;
    border-bottom-left-radius: @panelradius;

    .svg-container,
    .main-svg,
    .plot-container {
      width: 100% !important;
      height: 100% !important;
      // position: static;
    }

    .scrollbar;
    * {
      .scrollbar;
    }

    input,
    button {
      .input {
        width: 100%;
      }
      width: 100%;
    }
    #pythonConsoleOutput {
      padding: 0;
      display: flex;
    }
  }

  .flexlayout__tabset {
    background-color: @background_color_body_0;
    overflow: visible;
    border-radius: 0px @panelradius @panelradius @panelradius;
  }
  .flexlayout__border_inner_bottom {
    position: fixed;
    bottom: 0;
    left: 0;
    padding-left: 8px;
    border-top-right-radius: @panelradius;
    border-top-left-radius: @panelradius;
  }

  .flexlayout__tab_button--selected {
    background-color: @box_color;
    border-top-right-radius: @panelradius;
    border-top-left-radius: @panelradius;
    color: white;
    margin-right: 2px;
    .flexlayout__tab_button_content {
      color: @secondary_color;
    }
  }

  .flexlayout__tab_button--unselected {
    background-color: #222222;
    border-top-right-radius: @panelradius;
    border-top-left-radius: @panelradius;
  }

  .flexlayout__border_bottom {
    overflow: visible;
    border: none;
    border-top-right-radius: @panelradius;
    border-top-left-radius: @panelradius;
  }

  .flexlayout__border_button {
    .flexlayout__border_button_content {
      font-family: @font;
      // font-weight: bold;
      color: @secondary_color;

      font-size: @font-size-panels;
    }
    border: none;
    margin: 0;
    margin-right: 3px;
    border-top-right-radius: @panelradius;
    border-top-left-radius: @panelradius;
    background-color: @box_color;
  }

  .flexlayout__tab_button_content {
    color: @secondary_color;
    font-family: @font;
    font-size: @font-size-panels;
    margin-top: -3px;
    padding: 0;
    font-weight: normal;
    color: #b9b9b9;
  }

  // Thin white tab icons
  .flexlayout__border_button_trailing,
  .flexlayout__tab_button_trailing,
  .flexlayout__tab_toolbar_button-max,
  .customIconFlexLayout,
  .flexlayout__tab_toolbar_button-min,
  .flexlayout__tab_button_overflow {
    color: white;

    &:hover {
      color: white;
    }
  }

  .flexlayout__border_button_trailing,
  .flexlayout__tab_button_trailing {
    &:before {
      content: "\00d7";
    }
  }

  .flexlayout__splitter:hover {
    background-color: inherit;
  }
  .flexlayout__splitter {
    border-radius: 10px;
  }
  .flexlayout__splitter_drag {
    border: 1px solid white;
  }
  .flexlayout__popup_menu_item {
    color: white;
    background-color: @box_color;
  }
}

#main-header {
  text-align: right;
  width: 100%;
  h1 {
    margin: 0;
  }
  p {
    margin: 0;
  }
}

.scrollbar {
  &::-webkit-scrollbar-thumb {
    background: @secondary_color;
    border-radius: @panelradius;
  }
  &::-webkit-scrollbar {
    width: 8px;
  }
}
.listviewer {
  height: 100%;
  font-size: @font-size-panels;
  td,
  th {
    font-size: @font-size-panels;
  }

  td {
    font-weight: @font-weight-content;
  }
  th {
    font-weight: @font-weight-label;
  }
}

.list-summary {
  display: flex;
  padding-top: 0.5em;
  margin-top: 0.5em;
  border-top: 1px solid white;
  font-size: @font-size-panels;
  justify-content: space-between;
  i {
    font-weight: 300;
    font-style: italic;
  }
  .fa {
    font-size: 20px;
  }
}

.listviewer .list-icon {
  font-size: 20px;
}
.listviewer-container {
  flex: 2;
}
#mainContainer,
#mainContainer > div,
#main-container-inner {
  height: 100%;
  display: flex;
  flex-direction: column;
  .MuiGrid-item {
    padding-top: 0;
    padding-bottom: 0;
  }
}

.center-filler {
  max-height: 80%;
}

.slide-image {
  overflow: hidden;
  max-height: 100%;
  border-radius: @panelradius;
}

.font-small {
  font-size: 0.8em;
}
.font-medium {
  font-size: 1em;
}
.font-large {
  font-size: 2em;
}

#nwb-footer {
  display: flex;
  align-self: flex-end;
  justify-content: space-between;
  color: #ccc;
  font-size: 0.9em;

  .footer-aligned-container {
    margin: 0 -1rem;

    display: flex;
    flex-direction: row;
    align-items: center;
    a {
      color: white;

      &:hover {
        text-decoration: none;
        color: @primary_color;
      }
    }
    .footer-aligned {
      padding: 1rem 1rem;

      img {
        height: 1.5em;
        width: auto;
        &:hover {
          opacity: 0.9;
        }
      }
    }
  }
}

.sidebar {
  display: flex;
  flex-direction: column;
}
.hidden {
  display: none;
}
.aligned-form-elements-wrapper {
  display: flex;
  align-items: stretch;
}
.aligned-form-element {
  &.input {
    flex: 3;
    padding-right: 1em;
  }
  &.button {
    flex: 1;
  }
}

.popup-text {
  color: black !important;
}
.fa:hover {
  color: white;
}

// Plotly
.xtitle {
  fill: white !important;
}
.ytitle {
  fill: white !important;
}
.xtick > text {
  fill: white !important;
}
.ytick > text {
  fill: white !important;
}

// Collapsible
.Collapsible {
  background-color: transparent;

  .Collapsible__contentInner {
    padding: 0;
    border-top: 0;
    font-size: @font-size-panels;
    color: white;
    text-align: justify;
    margin-bottom: 1em;
    margin-top: 0.1em;
    font-weight: @font-weight-content;

    p {
      margin-bottom: 0.1em;
      font-size: @font-size-panels;
      line-height: 1.3em;
      text-align: left;
      font-weight: @font-weight-content;
    }

    .meta-label {
      font-weight: @font-weight-label;
    }

    p:last-child {
      margin-bottom: 0;
    }
  }
  .Collapsible__trigger {
    margin-left: -2px;
    display: block;
    color: @secondary_color !important;
    text-transform: capitalize;
    font-weight: @font-weight-label;
    font-size: @font-size-panels;
    color: @primary_color;
    position: relative;
    padding: 2px;
    background: transparent;
    cursor: pointer;
    &:hover {
      opacity: 0.9;
    }

    &:after {
      font-family: "FontAwesome";
      content: "\f139";
      position: absolute;
      right: 10px;
      top: 2px;
      display: block;
      transition: transform 300ms;
    }

    &.is-open:after {
      transform: rotateZ(180deg);
      color: #cccccc !important;
    }
  }
}
// controlPanel
#controlpanel {
  background-color: rgba(66, 66, 66, 0.9) !important;
  .griddle {
    td,
    th {
      color: @primary_color;
      background-color: rgba(55, 55, 55, 1);
    }
  }
}

#controlpanel .griddle {
  td {
    border-bottom: none;
  }
  th {
    border-bottom: 1px solid;
  }
}

.tabButton {
  color: white !important;
  border-top-left-radius: @panelradius;
  border-top-right-radius: @panelradius;
  background-color: @box_color;

  &:hover {
    opacity: 0.9;
  }

  &.selectedTab {
    border-top-left-radius: @panelradius;
    border-top-right-radius: @panelradius;
    color: white;
    border: white solid 1px;
    background-color: @background_color_widget;
  }
}

// modal
.modal-content {
  background-color: rgba(66, 66, 66, 0.9) !important;
}
#infomodal-btn {
  background-color: rgba(66, 66, 66, 0.9) !important;
}
#infomodal-btn:hover {
  background-color: rgba(66, 66, 66, 0.9) !important;
}
.fa:hover {
  opacity: 0.9;
}
.minIcons {
  color: black;
}
.maxIcons {
  color: black;
}
.closeIcons {
  color: black;
}

#commandInputArea {
  color: black;
}

.griddle-cell div {
  display: inline-block;
}

.imgBtn {
  font-size: large !important;
  color: @secondary_color;
}
.imgBtn:hover {
  opacity: 1;
}

.griddle-table-heading {
  color: @secondary_color;
  border-bottom-color: @secondary_color;
}

.gpt-addplot:hover {
  opacity: 0.9;
}
.gpt-addplot:before {
  vertical-align: -5px;
  font-size: 23px;
}

